Assigment1/gen/BKITParser.py
# Generated from /home/ren/Documents/PPL/Assigment1/initial/initial/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'?'", "'^'", "'@'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'If'", "'Parameter'", 
                     "'Return'", "'Then'", "'Var'", "'While'", "'True'", 
                     "'False'", "'EndDo'", "'='", "'+'", "'-'", "'*'", "'\\'", 
                     "'%'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", 
                     "'+.'", "'-.'", "'*.'", "'\\.'", "'=/='", "'>.'", "'<.'", 
                     "'>=.'", "'<=.'", "'!'", "'&&'", "'||'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "'.'", "':'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "SINGN", "AO1", "AO2", "BOOL_OP", "RL", "BOOL", 
                      "BODY_", "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", 
                      "ENDBODY_", "ENDIF", "ENDFOR", "ENDWHILE", "FOR", 
                      "FUNCTION_", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "TRUE", "FALSE", "ENDDO", "ASSIGN", 
                      "ADD", "SUB", "MULTI", "DIV", "MOD", "EQUAL", "NOT_E", 
                      "GREATER", "LESS", "GREATER_E", "LESS_E", "ADDF", 
                      "SUBF", "MULTIF", "DIVF", "EQUALF", "GREATER_F", "LESS_F", 
                      "GREATEREF", "LESSEF", "NOT", "AND", "OR", "LP", "RP", 
                      "LB", "RB", "LBR", "RBR", "DOT", "COLON", "SEMI", 
                      "COMMA", "ID", "INT", "FLOAT", "COMMENT", "STRING" ]

    RULE_program = 0
    RULE_exp = 1
    RULE_expint = 2
    RULE_expint1 = 3
    RULE_expint2 = 4
    RULE_expint3 = 5
    RULE_expint4 = 6
    RULE_expint5 = 7
    RULE_atomint = 8
    RULE_call = 9
    RULE_listexp = 10
    RULE_index = 11
    RULE_indexele = 12
    RULE_var = 13
    RULE_listid = 14
    RULE_index_var = 15
    RULE_indexele_var = 16
    RULE_assign_var = 17
    RULE_assign = 18
    RULE_retur = 19
    RULE_contin = 20
    RULE_br = 21
    RULE_st = 22
    RULE_ifst = 23
    RULE_whilest = 24
    RULE_dowhilest = 25
    RULE_forst = 26
    RULE_parameter = 27
    RULE_listpar = 28
    RULE_array = 29
    RULE_array1 = 30
    RULE_function = 31
    RULE_expb = 32
    RULE_expb1 = 33
    RULE_expb2 = 34
    RULE_expb3 = 35

    ruleNames =  [ "program", "exp", "expint", "expint1", "expint2", "expint3", 
                   "expint4", "expint5", "atomint", "call", "listexp", "index", 
                   "indexele", "var", "listid", "index_var", "indexele_var", 
                   "assign_var", "assign", "retur", "contin", "br", "st", 
                   "ifst", "whilest", "dowhilest", "forst", "parameter", 
                   "listpar", "array", "array1", "function", "expb", "expb1", 
                   "expb2", "expb3" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    WS=4
    SINGN=5
    AO1=6
    AO2=7
    BOOL_OP=8
    RL=9
    BOOL=10
    BODY_=11
    BREAK=12
    CONTINUE=13
    DO=14
    ELSE=15
    ELSEIF=16
    ENDBODY_=17
    ENDIF=18
    ENDFOR=19
    ENDWHILE=20
    FOR=21
    FUNCTION_=22
    IF=23
    PARAMETER=24
    RETURN=25
    THEN=26
    VAR=27
    WHILE=28
    TRUE=29
    FALSE=30
    ENDDO=31
    ASSIGN=32
    ADD=33
    SUB=34
    MULTI=35
    DIV=36
    MOD=37
    EQUAL=38
    NOT_E=39
    GREATER=40
    LESS=41
    GREATER_E=42
    LESS_E=43
    ADDF=44
    SUBF=45
    MULTIF=46
    DIVF=47
    EQUALF=48
    GREATER_F=49
    LESS_F=50
    GREATEREF=51
    LESSEF=52
    NOT=53
    AND=54
    OR=55
    LP=56
    RP=57
    LB=58
    RB=59
    LBR=60
    RBR=61
    DOT=62
    COLON=63
    SEMI=64
    COMMA=65
    ID=66
    INT=67
    FLOAT=68
    COMMENT=69
    STRING=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.matchWildcard()
            self.state = 73
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expint(self):
            return self.getTypedRuleContext(BKITParser.ExpintContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = BKITParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.expint()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expint1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Expint1Context)
            else:
                return self.getTypedRuleContext(BKITParser.Expint1Context,i)


        def RL(self):
            return self.getToken(BKITParser.RL, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_expint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpint" ):
                listener.enterExpint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpint" ):
                listener.exitExpint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpint" ):
                return visitor.visitExpint(self)
            else:
                return visitor.visitChildren(self)




    def expint(self):

        localctx = BKITParser.ExpintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expint)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.expint1(0)

                self.state = 78
                self.match(BKITParser.RL)
                self.state = 79
                self.expint1(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.expint1(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expint1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expint2(self):
            return self.getTypedRuleContext(BKITParser.Expint2Context,0)


        def expint1(self):
            return self.getTypedRuleContext(BKITParser.Expint1Context,0)


        def BOOL_OP(self):
            return self.getToken(BKITParser.BOOL_OP, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_expint1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpint1" ):
                listener.enterExpint1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpint1" ):
                listener.exitExpint1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpint1" ):
                return visitor.visitExpint1(self)
            else:
                return visitor.visitChildren(self)



    def expint1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.Expint1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expint1, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.expint2(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.Expint1Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expint1)
                    self.state = 87
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")

                    self.state = 88
                    self.match(BKITParser.BOOL_OP)
                    self.state = 89
                    self.expint2(0) 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expint2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expint3(self):
            return self.getTypedRuleContext(BKITParser.Expint3Context,0)


        def expint2(self):
            return self.getTypedRuleContext(BKITParser.Expint2Context,0)


        def AO1(self):
            return self.getToken(BKITParser.AO1, 0)

        def SINGN(self):
            return self.getToken(BKITParser.SINGN, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_expint2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpint2" ):
                listener.enterExpint2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpint2" ):
                listener.exitExpint2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpint2" ):
                return visitor.visitExpint2(self)
            else:
                return visitor.visitChildren(self)



    def expint2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.Expint2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expint2, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.expint3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.Expint2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expint2)
                    self.state = 98
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 99
                    _la = self._input.LA(1)
                    if not(_la==BKITParser.SINGN or _la==BKITParser.AO1):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 100
                    self.expint3(0) 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expint3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expint4(self):
            return self.getTypedRuleContext(BKITParser.Expint4Context,0)


        def expint3(self):
            return self.getTypedRuleContext(BKITParser.Expint3Context,0)


        def AO2(self):
            return self.getToken(BKITParser.AO2, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_expint3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpint3" ):
                listener.enterExpint3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpint3" ):
                listener.exitExpint3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpint3" ):
                return visitor.visitExpint3(self)
            else:
                return visitor.visitChildren(self)



    def expint3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.Expint3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expint3, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.expint4()
            self._ctx.stop = self._input.LT(-1)
            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.Expint3Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expint3)
                    self.state = 109
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")

                    self.state = 110
                    self.match(BKITParser.AO2)
                    self.state = 111
                    self.expint4() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expint4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(BKITParser.NOT, 0)

        def expint4(self):
            return self.getTypedRuleContext(BKITParser.Expint4Context,0)


        def expint5(self):
            return self.getTypedRuleContext(BKITParser.Expint5Context,0)


        def getRuleIndex(self):
            return BKITParser.RULE_expint4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpint4" ):
                listener.enterExpint4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpint4" ):
                listener.exitExpint4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpint4" ):
                return visitor.visitExpint4(self)
            else:
                return visitor.visitChildren(self)




    def expint4(self):

        localctx = BKITParser.Expint4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expint4)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.NOT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(BKITParser.NOT)
                self.state = 118
                self.expint4()
                pass
            elif token in [BKITParser.SINGN, BKITParser.BOOL, BKITParser.LP, BKITParser.LB, BKITParser.ID, BKITParser.INT, BKITParser.FLOAT, BKITParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.expint5()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expint5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGN(self):
            return self.getToken(BKITParser.SINGN, 0)

        def expint5(self):
            return self.getTypedRuleContext(BKITParser.Expint5Context,0)


        def atomint(self):
            return self.getTypedRuleContext(BKITParser.AtomintContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_expint5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpint5" ):
                listener.enterExpint5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpint5" ):
                listener.exitExpint5(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpint5" ):
                return visitor.visitExpint5(self)
            else:
                return visitor.visitChildren(self)




    def expint5(self):

        localctx = BKITParser.Expint5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expint5)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.SINGN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(BKITParser.SINGN)
                self.state = 123
                self.expint5()
                pass
            elif token in [BKITParser.BOOL, BKITParser.LP, BKITParser.LB, BKITParser.ID, BKITParser.INT, BKITParser.FLOAT, BKITParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.atomint()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self):
            return self.getTypedRuleContext(BKITParser.CallContext,0)


        def index(self):
            return self.getTypedRuleContext(BKITParser.IndexContext,0)


        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def BOOL(self):
            return self.getToken(BKITParser.BOOL, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def INT(self):
            return self.getToken(BKITParser.INT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_atomint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomint" ):
                listener.enterAtomint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomint" ):
                listener.exitAtomint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomint" ):
                return visitor.visitAtomint(self)
            else:
                return visitor.visitChildren(self)




    def atomint(self):

        localctx = BKITParser.AtomintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_atomint)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.call()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.index()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.match(BKITParser.LP)
                self.state = 130
                self.exp()
                self.state = 131
                self.match(BKITParser.RP)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 133
                self.match(BKITParser.ID)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 134
                self.array()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 135
                self.match(BKITParser.STRING)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 136
                self.match(BKITParser.BOOL)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 137
                self.match(BKITParser.FLOAT)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 138
                self.match(BKITParser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def listexp(self):
            return self.getTypedRuleContext(BKITParser.ListexpContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):
